# rpfmobile

./: README.md  package-lock.json  package.json  tasks.txt
backend/: app.py  package-lock.json  pyproject.toml
backend/scripts/: check_types.sh  fix_imports.sh  format.sh  lint.sh  start_server.sh
backend/services/: __init__.py
backend/services/calendar/: __init__.py  config.py  types.py
backend/services/calendar/appointments/: __init__.py  types.py
backend/services/calendar/bookings/: __init__.py  types.py
backend/services/calendar/lib/: request_methods.py
frontend/: .gitignore  app.json  eas.json  package-lock.json  package.json
frontend/api/: calendar.ts
frontend/api/calendar/: config.ts  index.ts  types.ts
frontend/app/: _layout.tsx  index.tsx
frontend/components/: appointmentSlotCards.tsx  bookingForm.tsx
frontend/components/AppointmentSlotCards/: index.tsx
frontend/components/AppointmentSlots/: appointmentSlotCard.tsx  appointmentSlotCards.tsx  appointmentSlotControls.tsx  appointmentSlotControlsButton.tsx  appointmentSlotControlsHeader.tsx  appointmentSlotDate.tsx  appointmentSlotDates.tsx  index.tsx
frontend/components/BookingOnboarding/: bookingForm.tsx  bookingFormSuccess.tsx  index.tsx
frontend/components/Calendar/: index.tsx
frontend/components/Counselling/: index.tsx
frontend/components/Header/: index.tsx
frontend/context/: availableAppointmentSlots.tsx  cssBootstrap.tsx
frontend/hooks/: useAvailableAppointmentSlots.ts  useBookingAppointment.ts  useBookingForm.ts  useModalVisibility.ts
frontend/lib/dates/: index.ts  (+1 more)
(+14 files in other folders)
