[tool.poetry]
name = "rpfmobile"
version = "0.1.0"
description = ""
authors = ["Mayowa Adeniyi <mayowaadeniyi@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^2.3.2"
Flask-Cors = "^3.0.10"
requests = "^2.30.0"

[tool.poetry.group.dev.dependencies]
pydantic = "^1.10.7"
isort = "^5.12.0"
black = "^23.3.0"
mypy = "^1.3.0"
types-flask-cors = "^3.0.10.5"
types-colorama = "^0.4.15.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = [
  "pydantic.mypy"
]
ignore_missing_imports = "True"